--- a/config/locales/models.pt-BR.yml
+++ b/config/locales/models.pt-BR.yml
@@ -1,37 +1,49 @@
-pt-BR:
+'pt-BR':
   activerecord:
     models:
-      admin: 
+      admin:
         one: Administrador
         other: Administradores
-      user: 
+      user:
         one: Usuário
         other: Usuários
-      subject: 
+      subject:
         one: Assunto
         other: Assuntos
-      question: 
+      question:
         one: Pergunta
         other: Perguntas
     attributes:
-      admin: 
+      admin:
         id: Código
         email: Email
         password: Senha
         password_confirmation: Confirmação da Senha
         created_at: Criado em
         updated_at: Atualizado em
-      user: 
+      user:
         id: Código
         email: Email
+        first_name: Nome
+        last_name: Sobrenome
+        password: Senha
+        password_confirmation: Confirmação da Senha
         created_at: Criado em
         updated_at: Atualizado em
-      subject: 
+      user_profile:
+        id: Código
+        address: Endereço
+        zip_code: CEP
+        gender: Sexo
+        birthdate: Data de Nascimento
+        created_at: Criado em
+        updated_at: Atualizado em
+      subject:
         id: Código
         description: Descrição
         created_at: Criado em
         updated_at: Atualizado em
-      question: 
+      question:
         id: Código
         description: Descrição
         subject: Assunto
